--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - pandas>=1.5.0
   - numpy>=1.21.0
   - matplotlib>=3.5.0
+  - scikit-learn>=1.3.0
   - jupyter>=1.0.0
   - ipykernel>=6.0.0
   - pip
